# DeepGEMM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  develop.sh  install.sh  pyproject.toml  setup.py
csrc/: python_api.cpp
csrc/apis/: gemm.hpp  layout.hpp  runtime.hpp
csrc/indexing/: main.cu
csrc/jit/: cache.hpp  compiler.hpp  device_runtime.hpp  handle.hpp  kernel_runtime.hpp
csrc/jit_kernels/heuristics/: common.hpp  sm100.hpp  sm90.hpp
csrc/jit_kernels/impls/: runtime_utils.hpp  sm100_bf16_gemm.hpp  sm100_fp8_gemm_1d1d.hpp  sm100_fp8_gemm_1d2d.hpp  sm90_bf16_gemm.hpp  sm90_fp8_gemm_1d2d.hpp  smxx_layout.hpp
csrc/utils/: exception.hpp  hash.hpp  layout.hpp  math.hpp  system.hpp
deep_gemm/: __init__.py  utils.py
deep_gemm/include/deep_gemm/: fp8_gemm.cuh  fp8_wgrad_gemm.cuh  mma_utils.cuh  nvrtc_std.cuh  scheduler.cuh  tma_utils.cuh  utils.cuh
deep_gemm/include/deep_gemm/common/: scheduler.cuh  sm100_utils.cuh  sm90_utils.cuh  types.hpp  utils.cuh
deep_gemm/include/deep_gemm/impls/: sm100_bf16_gemm.cuh  sm100_fp8_gemm_1d1d.cuh  sm100_fp8_gemm_1d2d.cuh  sm90_bf16_gemm.cuh  sm90_fp8_gemm_1d2d.cuh  smxx_layout.cuh
deep_gemm/jit/: __init__.py  compiler.py  interleave_ffma.py  runtime.py  template.py
deep_gemm/jit_kernels/: __init__.py  gemm.py  m_grouped_gemm.py  runtime.py  tuner.py  utils.py  wgrad_gemm.py
deep_gemm/testing/: __init__.py  bench.py  numeric.py
deep_gemm/utils/: layout.py  math.py
indexing/: main.cu
tests/: generators.py  test_bf16.py  test_core.py  test_fp8.py  test_jit.py  test_layout.py  test_lazy_init.py
